feat: add normolize, grid, variables, header-styles

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,10 @@
 body
+    @import 'normolize'
+    @import 'variabless'
+    @import 'grid'
+    @import 'interface'
     @import 'templates/header'
+
+    body
+        font-family: sans-serif
+        font-size: 14px
