--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -1,2 +1,27 @@
 .header
-    background-color: #ffffff;
+    background-color: $dark
+    padding: 24px 0
+.menu
+    display: flex
+    justify-content: space-between
+    align-items: center
+    &__logo
+        margin-right: 20px;
+.logo
+    color: $primary
+    text-transform: uppercase
+.nav
+    &__item
+        text-decoration: none
+        color: $light
+        text-transform: uppercase
+        margin-right: 35px
+.phone
+    color: $primary
+
+.contacts
+    &__phone
+        margin-right: 45px
+
+
+
