--- a/css/style.css
+++ b/css/style.css
@@ -1,158 +1,66 @@
-body {
-  /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-  /* Document
+@font-face {
+  font-family: 'FuturaBookC';
+  src: url("../fonts/futura/FuturaBookC.woff") format("woff"), url("../fonts/futura/FuturaBookC.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: wrap;
+}
+
+@font-face {
+  font-family: 'FuturaDemiC';
+  src: url("../fonts/futura/FuturaDemiC.woff") format("woff"), url("../fonts/futura/FuturaDemiC.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: wrap;
+}
+
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
    ========================================================================== */
-  /**
+/**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-  /* Sections
-   ========================================================================== */
-  /**
- * Remove the margin in all browsers.
- */
-  /**
- * Render the `main` element consistently in IE.
- */
-  /**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-  /* Grouping content
-   ========================================================================== */
-  /**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-  /**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-  /* Text-level semantics
-   ========================================================================== */
-  /**
- * Remove the gray background on active links in IE 10.
- */
-  /**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-  /**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-  /**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-  /**
- * Add the correct font size in all browsers.
- */
-  /**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-  /* Embedded content
-   ========================================================================== */
-  /**
- * Remove the border on images inside links in IE 10.
- */
-  /* Forms
-   ========================================================================== */
-  /**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-  /**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-  /**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-  /**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-  /**
- * Remove the inner border and padding in Firefox.
- */
-  /**
- * Restore the focus styles unset by the previous rule.
- */
-  /**
- * Correct the padding in Firefox.
- */
-  /**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-  /**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-  /**
- * Remove the default vertical scrollbar in IE 10+.
- */
-  /**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-  /**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-  /**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-  /**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-  /**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-  /* Interactive
-   ========================================================================== */
-  /*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-  /*
- * Add the correct display in all browsers.
- */
-  /* Misc
-   ========================================================================== */
-  /**
- * Add the correct display in IE 10+.
- */
-  /**
- * Add the correct display in IE 10.
- */
-}
-
-body html {
+html {
   line-height: 1.15;
   /* 1 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
 }
 
-body body {
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
   margin: 0;
 }
 
-body main {
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
   display: block;
 }
 
-body h1 {
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
-body hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -160,70 +68,107 @@ body hr {
   /* 2 */
 }
 
-body pre {
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
 }
 
-body a {
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
   background-color: transparent;
 }
 
-body abbr[title] {
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
   border-bottom: none;
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
-body b,
-body strong {
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
   font-weight: bolder;
 }
 
-body code,
-body kbd,
-body samp {
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
 }
 
-body small {
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
   font-size: 80%;
 }
 
-body sub,
-body sup {
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
 }
 
-body sub {
+sub {
   bottom: -0.25em;
 }
 
-body sup {
+sup {
   top: -0.5em;
 }
 
-body img {
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
   border-style: none;
 }
 
-body button,
-body input,
-body optgroup,
-body select,
-body textarea {
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
   font-family: inherit;
   /* 1 */
   font-size: 100%;
@@ -234,47 +179,72 @@ body textarea {
   /* 2 */
 }
 
-body button,
-body input {
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
   /* 1 */
   overflow: visible;
 }
 
-body button,
-body select {
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
   /* 1 */
   text-transform: none;
 }
 
-body button,
-body [type="button"],
-body [type="reset"],
-body [type="submit"] {
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
-body button::-moz-focus-inner,
-body [type="button"]::-moz-focus-inner,
-body [type="reset"]::-moz-focus-inner,
-body [type="submit"]::-moz-focus-inner {
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
-body button:-moz-focusring,
-body [type="button"]:-moz-focusring,
-body [type="reset"]:-moz-focusring,
-body [type="submit"]:-moz-focusring {
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
-body fieldset {
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
 
-body legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -288,121 +258,154 @@ body legend {
   /* 1 */
 }
 
-body progress {
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
   vertical-align: baseline;
 }
 
-body textarea {
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
   overflow: auto;
 }
 
-body [type="checkbox"],
-body [type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
 }
 
-body [type="number"]::-webkit-inner-spin-button,
-body [type="number"]::-webkit-outer-spin-button {
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
-body [type="search"] {
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
   /* 2 */
 }
 
-body [type="search"]::-webkit-search-decoration {
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-body ::-webkit-file-upload-button {
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
   -webkit-appearance: button;
   /* 1 */
   font: inherit;
   /* 2 */
 }
 
-body details {
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
   display: block;
 }
 
-body summary {
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
   display: list-item;
 }
 
-body template {
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
   display: none;
 }
 
-body [hidden] {
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
   display: none;
 }
 
-body .container {
+.container {
   max-width: 1256px;
   margin: auto;
 }
 
-body .button {
+.button {
   padding: 13px 20px;
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
 }
 
-body .button--primary {
+.button--primary {
   background-color: #E3B873;
   color: #ffffff;
 }
 
-body .header {
+.header {
   background-color: #131313;
   padding: 24px 0;
 }
 
-body .menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.menu {
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
-body .menu__logo {
+.menu__logo {
   margin-right: 20px;
 }
 
-body .logo {
+.logo {
   color: #E3B873;
   text-transform: uppercase;
 }
 
-body .nav__item {
+.nav__item {
   text-decoration: none;
   color: #ffffff;
   text-transform: uppercase;
   margin-right: 35px;
 }
 
-body .phone {
+.phone {
   color: #E3B873;
 }
 
-body .contacts__phone {
+.contacts__phone {
   margin-right: 45px;
 }
 
-body body {
-  font-family: sans-serif;
+body {
+  font-family: 'FuturaBookC';
   font-size: 14px;
 }
