--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,10 @@
-body
-    @import 'normolize'
-    @import 'variabless'
-    @import 'grid'
-    @import 'interface'
-    @import 'templates/header'
+@import 'fonts'
+@import 'normolize'
+@import 'variabless'
+@import 'grid'
+@import 'interface'
+@import 'templates/header'
 
-    body
-        font-family: sans-serif
-        font-size: 14px
+body
+    font-family: 'FuturaBookC'
+    font-size: 14px
