--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,39 @@ template {
   margin-right: 45px;
 }
 
+.hero {
+  position: relative;
+  background: #131313 url(../img/hero-bg.jpg) no-repeat center/cover;
+  height: 100vh;
+  color: #ffffff;
+}
+
+.hero__instagram {
+  position: absolute;
+  left: 0;
+  top: 0;
+  max-width: 80px;
+  height: 100%;
+}
+
+.instagram {
+  background-color: #131313;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.instagram__link {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #E3B873;
+  transform: rotate(90deg);
+}
+
+.title {
+  margin: 0;
+}
+
 body {
   font-family: 'FuturaBookC';
   font-size: 14px;
