--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,11 @@ template {
 }
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
   background-color: #131313;
   padding: 24px 0;
 }
@@ -407,6 +412,7 @@ template {
 
 .hero {
   position: relative;
+  padding-top: 100px;
   background: #131313 url(../img/hero-bg.jpg) no-repeat center/cover;
   height: 100vh;
   color: #ffffff;
