--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,9 @@
 @import 'templates/header'
 @import 'templates/hero'
 
+*, *:before, *:after
+    box-sizing: border-box
+
 body
     font-family: 'FuturaBookC'
     font-size: 14px
