--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -6,3 +6,8 @@
     &--primary
         background-color: $primary
         color: $light
+    &--outline
+        border: 1px solid $light;
+        background-color: transparent
+        border-radius: 2px;
+        color: $light
