feat: add hero style and Yeseva one font

--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,7 @@ template {
 }
 
 .container {
+  width: 85%;
   max-width: 1256px;
   margin: auto;
 }
@@ -367,6 +368,13 @@ template {
 
 .button--primary {
   background-color: #E3B873;
+  color: #ffffff;
+}
+
+.button--outline {
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  border-radius: 2px;
   color: #ffffff;
 }
 
@@ -412,6 +420,8 @@ template {
 
 .hero {
   position: relative;
+  display: flex;
+  flex-direction: column;
   padding-top: 100px;
   background: #131313 url(../img/hero-bg.jpg) no-repeat center/cover;
   height: 100vh;
@@ -424,6 +434,34 @@ template {
   top: 0;
   max-width: 80px;
   height: 100%;
+}
+
+.hero__scroll-down {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  min-width: 247px;
+  min-height: 97px;
+  background-color: #131313;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.hero__content {
+  max-width: 670px;
+}
+
+.hero__text {
+  font-size: 22px;
+  max-width: 500px;
+}
+
+.hero__button {
+  margin-right: 20px;
 }
 
 .instagram {
@@ -442,6 +480,14 @@ template {
 
 .title {
   margin: 0;
+  font-family: 'Yeseva One', cursive;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 300;
+}
+
+.title--primary {
+  color: #E3B873;
 }
 
 *, *:before, *:after {
