--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,5 +1,7 @@
 .hero
     position: relative
+    display: flex
+    flex-direction: column
     padding-top: 100px
     background: $dark url(../img/hero-bg.jpg) no-repeat center / cover
     height: 100vh
@@ -10,6 +12,27 @@
         top: 0
         max-width: 80px
         height: 100%
+    &__scroll-down
+        position: absolute
+        left: 0
+        bottom: 0
+        min-width: 247px
+        min-height: 97px
+        background-color: $dark
+        display: flex
+        align-items: center
+        justify-content: center
+        text-transform: uppercase
+        text-decoration: none
+        color: $light
+    &__content
+        max-width: 670px
+    &__text
+        font-size: 22px
+        max-width: 500px
+    &__button
+        margin-right: 20px
+
 .instagram
     background-color: $dark
     display: flex
@@ -22,4 +45,10 @@
         transform: rotate(90deg)
 .title
     margin: 0
+    font-family: 'Yeseva One', cursive;
+    text-transform: uppercase
+    font-size: 40px
+    font-weight: 300
+    &--primary
+        color: $primary
    
