--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -21,6 +21,9 @@
         color: $light
         text-transform: uppercase
         margin-right: 35px
+        &:hover
+            color: $primary
+            transition: 0.2s
 .phone
     color: $primary
 
