--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -2,10 +2,19 @@
     position: relative
     display: flex
     flex-direction: column
-    padding-top: 100px
+    justify-content: center
+    align-items: flex-start
+    padding-top: 90px
     background: $dark url(../img/hero-bg.jpg) no-repeat center / cover
     height: 100vh
     color: $light
+    &:before
+        content: ''
+        position: absolute
+        bottom: 0px
+        width: 100%
+        height: 100%
+        background-color: rgba($dark, 0.7)
     &__instagram
         position: absolute
         left: 0
@@ -25,8 +34,17 @@
         text-transform: uppercase
         text-decoration: none
         color: $light
+        &:after
+            content: ''
+            background: url('../img/arrow-down.svg') no-repeat center
+            height: 30px
+            width: 30px
+            border: solid 2px $primary
+            border-radius: 50%
+            margin-left: 20px
     &__content
         max-width: 670px
+        position: relative
     &__text
         font-size: 22px
         max-width: 500px
@@ -39,10 +57,19 @@
     justify-content: center
     align-items: center
     &__link
+        display: flex
+        align-items: center
         text-transform: uppercase
         text-decoration: none
         color: $primary
         transform: rotate(90deg)
+        line-height: 0.8
+        &:after
+            content: ''
+            width: 50px
+            height: 1px
+            background-color: $primary
+            margin-left: 8px
 .title
     margin: 0
     font-family: 'Yeseva One', cursive;
