--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,6 +3,8 @@
     border: none
     border-radius: 2px
     text-transform: uppercase
+    &:focus
+        outline: none
     &:hover
         cursor: pointer
     &--primary
