--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,13 +2,9 @@
 @import 'normolize'
 @import 'variabless'
 @import 'grid'
+@import 'settings'
 @import 'interface'
 @import 'templates/header'
 @import 'templates/hero'
+@import 'templates/control'
 
-*, *:before, *:after
-    box-sizing: border-box
-
-body
-    font-family: 'FuturaBookC'
-    font-size: 14px
