--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -20,7 +20,7 @@
         text-decoration: none
         color: $light
         text-transform: uppercase
-        margin-right: 35px
+        margin-right: 2.2rem
         &:hover
             color: $primary
             transition: 0.2s
