--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -25,8 +25,8 @@
         position: absolute
         left: 0
         bottom: 0
-        min-width: 247px
-        min-height: 97px
+        min-width: 17.6rem
+        min-height: 6.93rem
         background-color: $dark
         display: flex
         align-items: center
@@ -43,11 +43,12 @@
             border-radius: 50%
             margin-left: 20px
     &__content
-        max-width: 670px
+        margin-left: 4.28rem
+        max-width: 47.85rem
         position: relative
     &__text
-        font-size: 22px
-        max-width: 500px
+        font-size: 1.57rem
+        max-width: 35.71rem
     &__button
         margin-right: 20px
 
@@ -74,7 +75,7 @@
     margin: 0
     font-family: 'Yeseva One', cursive;
     text-transform: uppercase
-    font-size: 40px
+    font-size: 2.857rem
     font-weight: 300
     &--primary
         color: $primary
