feat: add types and design section in desktop snd mobile version

--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -5,22 +5,23 @@
     width: 100%
     z-index: 99
     background-color: $dark
-    padding: 24px 0
+    padding: 1.71rem 0
 .menu
     display: flex
     justify-content: space-between
     align-items: center
     &__logo
-        margin-right: 20px;
+        margin-right: 1.43rem;
 .logo
     color: $primary
     text-transform: uppercase
+    font-size: 1.07rem
 .nav
     &__item
         text-decoration: none
         color: $light
         text-transform: uppercase
-        margin-right: 2.2rem
+        margin-right: 2.65rem
         &:hover
             color: $primary
             transition: 0.2s
@@ -29,7 +30,10 @@
 
 .contacts
     &__phone
-        margin-right: 45px
+        margin-right: 3.21rem
+    &__button
+        width: 11.6rem
+        padding: 0.9rem 1rem
 
 
 
