--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -49,6 +49,9 @@
     &__text
         font-size: 1.57rem
         max-width: 35.71rem
+        line-height: 2.2rem
+        margin-top: 1.1rem
+        margin-bottom: 3rem
     &__button
         margin-right: 20px
 
@@ -76,6 +79,7 @@
     font-family: 'Yeseva One', cursive;
     text-transform: uppercase
     font-size: 2.857rem
+    line-height: 3.8rem
     font-weight: 300
     &--primary
         color: $primary
