--- a/css/style.css
+++ b/css/style.css
@@ -372,12 +372,12 @@ body {
   font-size: 1rem;
 }
 
+.section {
+  padding: 60px 0;
+}
+
 .section-title {
   text-align: center;
-  text-transform: uppercase;
-  font-family: 'Yeseva One', cursive;
-  font-weight: 300;
-  font-size: 20px;
 }
 
 .section-title__image {
@@ -394,8 +394,29 @@ body {
   margin: 0 10px;
 }
 
+.section-title__heading {
+  font-size: 1.43rem;
+  text-transform: uppercase;
+  font-family: 'Yeseva One', cursive;
+  font-weight: 300;
+  font-size: 20px;
+}
+
+.section-title__description {
+  font-size: 1.25rem;
+  margin: 1.5rem auto 2.7rem;
+  padding: 0 1rem;
+  line-height: 135.84%;
+  max-width: 52.93rem;
+}
+
+img {
+  max-width: 100%;
+}
+
 .button {
-  padding: 13px 20px;
+  padding: 1.36rem 1.96rem;
+  width: 14.78rem;
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
@@ -435,7 +456,7 @@ body {
   width: 100%;
   z-index: 99;
   background-color: #131313;
-  padding: 24px 0;
+  padding: 1.71rem 0;
 }
 
 .menu {
@@ -445,19 +466,20 @@ body {
 }
 
 .menu__logo {
-  margin-right: 20px;
+  margin-right: 1.43rem;
 }
 
 .logo {
   color: #E3B873;
   text-transform: uppercase;
+  font-size: 1.07rem;
 }
 
 .nav__item {
   text-decoration: none;
   color: #ffffff;
   text-transform: uppercase;
-  margin-right: 2.2rem;
+  margin-right: 2.65rem;
 }
 
 .nav__item:hover {
@@ -470,7 +492,12 @@ body {
 }
 
 .contacts__phone {
-  margin-right: 45px;
+  margin-right: 3.21rem;
+}
+
+.contacts__button {
+  width: 11.6rem;
+  padding: 0.9rem 1rem;
 }
 
 .hero {
@@ -536,6 +563,9 @@ body {
 .hero__text {
   font-size: 1.57rem;
   max-width: 35.71rem;
+  line-height: 2.2rem;
+  margin-top: 1.1rem;
+  margin-bottom: 3rem;
 }
 
 .hero__button {
@@ -572,11 +602,73 @@ body {
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
   font-size: 2.857rem;
+  line-height: 3.8rem;
   font-weight: 300;
 }
 
 .title--primary {
   color: #E3B873;
+}
+
+.types__section-title {
+  margin-bottom: 2rem;
+}
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.col {
+  flex-basis: 32%;
+}
+
+.card__text {
+  position: relative;
+  margin: 0 auto;
+  margin-top: -9rem;
+  padding: 1.78rem 2.14rem;
+  background-color: #ffffff;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+  max-width: 23.6rem;
+}
+
+.card__title {
+  margin: 0 0 1rem;
+  font-family: 'Yeseva One', cursive;
+  font-size: 1.29rem;
+}
+
+.card__list {
+  margin: 0;
+  margin-bottom: 2.07rem;
+  padding: 0 0 0 1rem;
+  font-size: 1.01rem;
+  line-height: 1.79rem;
+  color: #959595;
+}
+
+.card__pricetag {
+  position: absolute;
+  left: 0;
+  bottom: -1.79rem;
+  width: 16.29rem;
+  text-align: center;
+  padding: 1.214rem 1.3rem;
+  font-size: 1.29rem;
+  font-family: 'Yeseva One', cursive;
+  text-transform: uppercase;
+  background-color: #E3B873;
+  color: #ffffff;
+}
+
+.design {
+  background-color: #ffffff;
+}
+
+.design__section-title {
+  color: #131313;
 }
 
 @media screen and (max-width: 1200px) {
@@ -597,6 +689,31 @@ body {
   }
   .nav {
     display: none;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .types__card {
+    margin-bottom: 6.58rem;
+  }
+  .design__card {
+    margin-bottom: 6.58rem;
+  }
+  .card__text {
+    margin-left: 0;
+  }
+  .design {
+    background-color: #131313;
+  }
+  .design__section-title {
+    color: #ffffff;
+  }
+  .section-title__description {
+    max-width: 30rem;
   }
 }
 
