--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,5 +1,6 @@
 .button 
-    padding: 13px 20px
+    padding: 1.36rem 1.96rem
+    width: 14.78rem
     border: none
     border-radius: 2px
     text-transform: uppercase
