--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -14,6 +14,28 @@
     .nav
         display: none
 
+@media screen and ( max-width: 760px )
+    .row
+        flex-direction: column
+        align-items: center
+    .types
+        &__card
+            margin-bottom: 6.58rem
+    .design
+        &__card
+            margin-bottom: 6.58rem
+    .card
+        &__text
+            margin-left: 0
+    .design
+        background-color: $dark
+        &__section-title
+            color: $light
+    .section
+        &-title
+            &__description
+                max-width: 30rem
+
 @media screen and ( max-width: 570px  )
     .contacts
         &__phone
@@ -37,6 +59,7 @@
             width: 100%
             margin-bottom: 2.17rem
             margin-right: 0
+
 @media screen and ( max-height: 540px  )
     .hero
         &__scroll-down
