--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,12 +6,9 @@ body
     font-family: 'FuturaBookC'
     font-size: 1rem
 .section
+    padding: 60px 0
     &-title
         text-align: center
-        text-transform: uppercase
-        font-family: 'Yeseva One', cursive
-        font-weight: 300
-        font-size: 20px
         &__image
             display: flex
             justify-content: center
@@ -22,5 +19,21 @@ body
                 height: 2px
                 background-color: $primary
                 margin: 0 10px
+        &__heading
+            font-size: 1.43rem
+            text-transform: uppercase
+            font-family: 'Yeseva One', cursive
+            font-weight: 300
+            font-size: 20px
+        &__description
+            font-size: 1.25rem
+            margin: 1.5rem auto 2.7rem
+            padding: 0 1rem
+            line-height: 135.84%
+            max-width: 52.93rem
+
+img 
+    max-width: 100%
+
                 
             
