--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,6 @@ img {
 
 .button {
   padding: 1.36rem 1.96rem;
-  width: 14.78rem;
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
@@ -447,6 +446,48 @@ img {
   background-color: transparent;
   border-radius: 2px;
   color: #ffffff;
+}
+
+.label--light {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 1.07rem;
+}
+
+.input {
+  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+  background-color: transparent;
+  font-size: 1.285rem;
+  color: #ffffff;
+  padding: 0.5rem 0;
+}
+
+.input::placeholder {
+  color: #ffffff;
+}
+
+.policy__checkbox {
+  opacity: 0;
+  visability: hidden;
+}
+
+.policy__checkbox:checked + .policy__label::before {
+  background: #E3B873 url("../img/check.svg") no-repeat center/0.8rem;
+}
+
+.policy__label {
+  display: flex;
+  align-items: center;
+}
+
+.policy__label::before {
+  content: '';
+  width: 18px;
+  height: 18px;
+  border: 1px solid #E3B873;
+  border-radius: 1px;
+  cursor: pointer;
+  margin-right: 0.64rem;
 }
 
 .header {
@@ -570,6 +611,7 @@ img {
 
 .hero__button {
   margin-right: 20px;
+  width: 14.78rem;
 }
 
 .instagram {
@@ -669,6 +711,75 @@ img {
 
 .design__section-title {
   color: #131313;
+}
+
+.modal {
+  position: fixed;
+  z-index: 199;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(19, 19, 19, 0.6);
+}
+
+.modal__dialog {
+  position: relative;
+  max-width: 36.36rem;
+  background: #131313 url("../img/bg-lines.svg") no-repeat center;
+  padding: 2.36rem 3.5rem 1.92rem;
+  color: #ffffff;
+}
+
+.modal__close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 28px;
+  height: 28px;
+  background: transparent url(../img/close.svg) no-repeat center;
+  border: none;
+  margin: 12px;
+  cursor: pointer;
+}
+
+.modal__close:focus {
+  outline: none;
+}
+
+.modal__title {
+  font-family: 'Yeseva One', cursive;
+  font-weight: 300;
+  font-size: 1.357rem;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 2.428rem;
+}
+
+.modal__form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__input {
+  margin-bottom: 3.428rem;
+}
+
+.modal__input:last-of-type {
+  margin-bottom: 1rem;
+}
+
+.modal__policy {
+  margin-bottom: 2.7rem;
+}
+
+.modal__button {
+  align-self: flex-end;
 }
 
 @media screen and (max-width: 1200px) {
