--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,6 +1,5 @@
 .button 
     padding: 1.36rem 1.96rem
-    width: 14.78rem
     border: none
     border-radius: 2px
     text-transform: uppercase
@@ -21,3 +20,36 @@
         background-color: transparent
         border-radius: 2px;
         color: $light
+.label
+    &--light
+        color: rgba($light, 0.5)
+        font-size: 1.07rem
+.input
+    border: none
+    border-bottom: 1px solid rgba($light, 0.15)
+    background-color: transparent
+    font-size: 1.285rem
+    color: $light
+    padding: 0.5rem 0
+    &::placeholder
+        color: $light
+.policy
+    &__checkbox
+        opacity: 0
+        visability: hidden
+        &:checked +
+           .policy__label
+               &::before
+                   background: $primary url('../img/check.svg') no-repeat center /0.8rem
+    &__label
+        display: flex
+        align-items: center
+        &::before
+            content: ''
+            width: 18px
+            height: 18px
+            border: 1px solid $primary
+            border-radius: 1px
+            cursor: pointer
+            margin-right: 0.64rem
+
