--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -54,6 +54,7 @@
         margin-bottom: 3rem
     &__button
         margin-right: 20px
+        width: 14.78rem
 
 .instagram
     background-color: $dark
