--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -52,3 +52,16 @@
         margin-bottom: 2.7rem
     &__button
         align-self: flex-end
+.scrollup
+    opacity: 0
+    visibility: hidden
+    position: fixed
+    z-index: 199
+    bottom: 0
+    right: 0
+    display: flex
+    align-items: center
+    justify-content: center
+    &--visible
+        opacity: 1
+        visibility: visible
