--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,20 @@ template {
   margin: auto;
 }
 
+.row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.col-30 {
+  flex-basis: 32%;
+}
+
+.col-50 {
+  width: 50%;
+}
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -376,8 +390,17 @@ body {
   padding: 60px 0;
 }
 
+.section--dark {
+  background-color: #131313;
+  color: #ffffff;
+}
+
 .section-title {
   text-align: center;
+}
+
+.section-title--left {
+  text-align: left;
 }
 
 .section-title__image {
@@ -400,6 +423,30 @@ body {
   font-family: 'Yeseva One', cursive;
   font-weight: 300;
   font-size: 20px;
+}
+
+.section-title__heading--primary {
+  color: #E3B873;
+}
+
+.section-title__word {
+  display: flex;
+  line-height: 138.6%;
+  align-items: center;
+}
+
+.section-title__word::after {
+  content: '';
+  width: 92px;
+  height: 1px;
+  background-color: #E3B873;
+  margin-left: 2rem;
+}
+
+.section-title__text {
+  font-size: 1.28rem;
+  line-height: 2.07rem;
+  max-width: 31.57rem;
 }
 
 .section-title__description {
@@ -562,6 +609,17 @@ img {
   background-color: rgba(19, 19, 19, 0.7);
 }
 
+.hero::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 3.46rem;
+  background-color: #131313;
+}
+
 .hero__instagram {
   position: absolute;
   left: 0;
@@ -572,6 +630,7 @@ img {
 
 .hero__scroll-down {
   position: absolute;
+  z-index: 3;
   left: 0;
   bottom: 0;
   min-width: 17.6rem;
@@ -652,18 +711,63 @@ img {
   color: #E3B873;
 }
 
+.swiper-slide {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.swiper-slide__text {
+  flex-basis: 50%;
+  margin-bottom: 4.42rem;
+}
+
+.swiper-slide__heading {
+  font-size: 1.285rem;
+  line-height: 1.78rem;
+  font-family: 'Yeseva One', cursive;
+  color: #E3B873;
+  text-transform: uppercase;
+  font-weight: 300;
+  margin-bottom: 0.64rem;
+}
+
+.swiper-slide__value {
+  line-height: 1.42rem;
+}
+
+.swiper-pagination-bullet {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #ffffff;
+}
+
+.swiper-button-prev, .swiper-button-next {
+  top: auto;
+  width: 42px;
+  height: 13px;
+}
+
+.swiper-button-prev::after, .swiper-button-next::after {
+  display: none;
+}
+
+.swiper-button-prev {
+  left: 0;
+  background: url("../img/arrow-prev.svg") no-repeat center;
+}
+
+.swiper-button-next {
+  background: url("../img/arrow-next.svg") no-repeat center;
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets {
+  width: auto;
+}
+
 .types__section-title {
   margin-bottom: 2rem;
-}
-
-.row {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-
-.col {
-  flex-basis: 32%;
 }
 
 .card__text {
