--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -15,6 +15,15 @@
         width: 100%
         height: 100%
         background-color: rgba($dark, 0.7)
+    &::after
+        content: ''
+        position: absolute
+        bottom: 0
+        left: 0
+        right: 0
+        width: 100%
+        height: 3.46rem
+        background-color: $dark
     &__instagram
         position: absolute
         left: 0
@@ -23,6 +32,7 @@
         height: 100%
     &__scroll-down
         position: absolute
+        z-index: 3
         left: 0
         bottom: 0
         min-width: 17.6rem
