--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -35,6 +35,8 @@
         &-title
             &__description
                 max-width: 30rem
+    .work
+        display: none 
 
 @media screen and ( max-width: 570px  )
     .contacts
@@ -59,6 +61,19 @@
             width: 100%
             margin-bottom: 2.17rem
             margin-right: 0
+    .col
+        &-50
+            width: 100%
+    .swiper
+        &-slide
+            &__text
+                margin-bottom: 4.2rem
+            &__image
+                margin-top: 2rem
+                height: 16.75rem
+    .projects
+        padding-top: 3rem
+        padding-bottom: 1rem
 
 @media screen and ( max-height: 540px  )
     .hero
