--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,7 @@
 @import 'templates/control'
 @import 'templates/types'
 @import 'templates/design'
+@import 'templates/work'
 @import 'templates/modal'
 
 @import 'media'
