--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -31,8 +31,12 @@
     font-size: 1.285rem
     color: $light
     padding: 0.5rem 0
+    
     &::placeholder
         color: $light
+    &--light
+        &::placeholder
+        color: $dark
 .policy
     &__checkbox
         opacity: 0
