--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -19,6 +19,8 @@
         flex-direction: column
         align-items: center
     .types
+        margin-top: -6.7rem
+        background-color: $light
         &__card
             margin-bottom: 6.58rem
     .design
@@ -36,7 +38,28 @@
             &__description
                 max-width: 30rem
     .work
-        display: none 
+        display: none
+    .control
+        margin-top: 0
+        background-color: $dark 
+        &__text
+            color: $light
+            font-size: 1.28rem
+            margin-bottom: 0
+        &__form
+            flex-direction: column
+            color: rgba(255, 255, 255, 0.5)
+            font-size: 1.07rem
+        &__input
+            &-group
+                margin-top: 4.5rem
+        &__button
+            order: 5
+            margin-top: 4.4rem
+        &__policy
+            margin-top: 0.5rem
+            &-label
+                justify-content: start
 
 @media screen and ( max-width: 570px  )
     .contacts
