--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -14,6 +14,8 @@ body
     text-align: center
     &--left
       text-align: left
+    &--light
+      color: $light
     &__suptitle
       font-weight: 500
       font-size: 1.07rem
