feat: add footer section

--- a/css/style.css
+++ b/css/style.css
@@ -624,6 +624,7 @@ img {
 .policy__label {
   display: flex;
   align-items: center;
+  font-size: 1.142rem;
 }
 
 .policy__label::before {
@@ -634,6 +635,18 @@ img {
   border-radius: 1px;
   cursor: pointer;
   margin-right: 0.64rem;
+}
+
+.policy__label--center {
+  justify-content: center;
+}
+
+label.invalid {
+  color: tomato;
+}
+
+input.invalid {
+  border-bottom: 1px solid tomato;
 }
 
 .header {
@@ -887,6 +900,7 @@ img {
 
 .control__input--light {
   border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+  color: #131313;
 }
 
 .control__button {
@@ -972,6 +986,11 @@ img {
 
 .work__step {
   flex-basis: 33%;
+  opacity: 0.3;
+}
+
+.work__step--light {
+  opacity: 1;
 }
 
 .work__step__name {
@@ -1009,6 +1028,67 @@ img {
   font-weight: normal;
   font-size: 1.07rem;
   line-height: 1.79rem;
+}
+
+.footer {
+  background: #131313 url("../img/footer-bg.jpg") no-repeat center/cover;
+  padding-top: 3rem;
+}
+
+.footer__wrap {
+  background-color: #181818;
+  max-width: 53.07rem;
+  margin: auto;
+  margin-bottom: 3.714rem;
+  padding: 2.5rem;
+}
+
+.footer__title {
+  text-transform: uppercase;
+  font-family: Yeseva One, cursive;
+  font-size: 1.428rem;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 3.214rem;
+  margin-top: 0;
+}
+
+.footer__form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer__input {
+  padding-top: 0.3rem;
+}
+
+.footer__input-group {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 45%;
+  margin-bottom: 3.2rem;
+}
+
+.footer__input-group--full-width {
+  flex-basis: 100%;
+  margin-bottom: 2rem;
+}
+
+.footer__policy {
+  flex-basis: 100%;
+  margin-bottom: 3.6rem;
+}
+
+.footer__button {
+  margin: auto;
+  padding: 1.285rem 4.785rem;
+}
+
+.footer__menu {
+  background-color: #131313;
+  padding: 4.285rem 0;
 }
 
 .modal {
@@ -1071,8 +1151,10 @@ img {
   flex-direction: column;
 }
 
-.modal__input {
+.modal__input-group {
   margin-bottom: 3.428rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal__input:last-of-type {
