--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -46,12 +46,14 @@
     &-label
       justify-content: center
   &__input
+
     &-group
       display: flex
       flex-direction: column
       flex-basis: 30%
     &--light
       border-bottom: 1px solid rgba(54, 54, 54, 0.3)
+      color: $dark
   &__button
     padding: 1.285rem 4.785rem    
   &__label
