--- a/sass/templates/_work.sass
+++ b/sass/templates/_work.sass
@@ -11,11 +11,14 @@
     flex-wrap: wrap
   &__step
     flex-basis: 33%
+    opacity: 0.3
     // font-family: Yeseva One
     // font-weight: normal
     // font-size: 15px
     // line-height: 21px
     // text-transform: uppercase
+    &--light
+      opacity: 1
     &__name
       font-family: Yeseva One
       font-weight: normal
