--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -48,6 +48,7 @@
     &__label
         display: flex
         align-items: center
+        font-size: 1.142rem
         &::before
             content: ''
             width: 18px
@@ -56,4 +57,13 @@
             border-radius: 1px
             cursor: pointer
             margin-right: 0.64rem
+        &--center
+            justify-content: center
+label
+    &.invalid
+        color: tomato 
+input
+    &.invalid
+        border-bottom: 1px solid tomato
+
 
