--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,6 +11,7 @@
 @import 'templates/types'
 @import 'templates/design'
 @import 'templates/work'
+@import 'templates/footer'
 @import 'templates/modal'
 
 @import 'media'
