--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,8 +13,6 @@
             margin-left: 0
     .nav
         display: none
-
-@media screen and ( max-width: 760px )
     .row
         flex-direction: column
         align-items: center
@@ -60,6 +58,29 @@
             margin-top: 0.5rem
             &-label
                 justify-content: start
+    .team
+        &__text
+            margin-left: 2.214rem
+            margin-right: 2.214rem
+        &__card
+            margin-bottom: 10rem
+        &__row
+            margin-bottom: -10rem
+        &__qualified
+            display: none
+    .clients 
+        display: none
+    .footer
+        background: $dark
+        padding: 0
+        &__container
+            margin-top: 0
+            width: 100%
+        &__wrap
+            margin: 0
+            max-width: 100%
+            background: $dark
+
 
 @media screen and ( max-width: 570px  )
     .contacts
