--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -61,10 +61,10 @@ body
       line-height: 2.07rem
       max-width: 31.57rem
     &__description
-      font-size: 1.25rem
+      font-size: 1.428rem
       margin: 1.5rem auto 2.7rem
       padding: 0 1rem
-      line-height: 135.84%
+      line-height: 1.928rem
       max-width: 52.93rem
 
 .swiper
@@ -115,5 +115,21 @@ body
 img 
   max-width: 100%
 
+.card
+  &__header
+    display: flex
+    align-items: center
+    padding: 1.429rem 1.571rem 
+  &__image
+    &-wrapper
+      width: 5.429rem
+      height: 5.429rem
+      border-radius: 50%
+      overflow: hidden
+      display: flex
+      justify-content: center
+      align-items: center
+
+  
                 
             
