--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,6 +11,8 @@
 @import 'templates/types'
 @import 'templates/design'
 @import 'templates/work'
+@import 'templates/team'
+@import 'templates/clients'
 @import 'templates/footer'
 @import 'templates/modal'
 
