--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -7,6 +7,8 @@
     text-align: center
     font-size: 1.428rem
     line-height: 2.4rem
+    &--grey
+      color: $grey
     &::before
       content: ''
       display: block
