--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -1,6 +1,8 @@
 .footer
   background: $dark url('../img/footer-bg.jpg') no-repeat center / cover 
   padding-top: 3rem
+  &__container
+    margin-top: -20rem
   &__wrap
     background-color: $black
     max-width: 53.07rem
@@ -40,6 +42,26 @@
   &__menu
     background-color: $dark
     padding: 4.285rem 0
+  &__map
+    margin: auto;
+    margin-bottom: 4.24rem
+    max-width: 66.07rem
+    margin-top: 4.24rem;
+    width: 85%;
+  &__contacts 
+    font-family: Yeseva One, cursive
+    font-weight: 400
+    text-align: center
+    color: $primary
+    text-transform: uppercase
+    font-size: 1.428rem
+    line-height: 2rem
+  &__social 
+    margin: auto
+    margin-top: 1.857rem
+    display: flex
+    justify-content: space-between
+    width: 5.071rem
 
 
 
