--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -14,6 +14,8 @@
         margin: 0 0 1rem
         font-family: 'Yeseva One', cursive
         font-size: 1.29rem
+        &--dark
+            color: $black
     &__list
         margin: 0
         margin-bottom: 2.07rem
@@ -29,6 +31,7 @@
         text-align: center
         padding: 1.214rem 1.3rem
         font-size: 1.29rem
+        font-weight: 300
         font-family: 'Yeseva One', cursive
         text-transform: uppercase
         background-color: $primary
